--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+	"eject": "react-scripts eject",
+	"git:push": "git commit -a -m \"new update\" & git push -u kw master"
   },
   "eslintConfig": {
     "extends": "react-app"
