--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
 	"eject": "react-scripts eject",
-	"git:push": "git commit -a -m \"new update\" & git push -u kw master"
+	"git:push": "git commit -a -m \"new update\" && git push -u kw master"
   },
   "eslintConfig": {
     "extends": "react-app"
