--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"git:push:master": "git commit -a -m \"new update\" && git push -u kw master",
-		"git:push:dev": "git commit -a -m \"new update\" && git push -u kw developer"
+		"git:push:dev": "git add . && git commit -a -m \"new update\" && git push -u kw developer"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
