--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-	"name": "khanon-web",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"react": "^16.13.0",
-		"react-dom": "^16.13.0",
-		"react-scripts": "3.4.0"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"git:push:dev": "git add . && git commit -a -m \"new update\" && git push -u kw developer"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "khanon-web",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "lint": "eslint src/**"
+  },
+  "dependencies": {
+    "@babylonjs/core": "^4.2.0",
+    "@babylonjs/gui": "^4.2.0",
+    "@babylonjs/loaders": "^4.2.0",
+    "cannon": "^0.6.2",
+    "react": "^17.0.2",
+    "react-babylonjs": "^2.3.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.2",
+    "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@types/cannon": "^0.1.5",
+    "@types/node": "^12.20.11",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.12",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.2.1",
+    "web-vitals": "^1.1.1"
+  }
 }
