--- a/package.json
+++ b/package.json
@@ -32,5 +32,17 @@
     "gh-pages": "^3.1.0",
     "prettier": "^2.2.1",
     "web-vitals": "^1.1.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
