--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "khanon-web",
   "version": "1.0.0",
-  "description": "Lorenzo Portillo's projects",
+  "description": "A view to my personal and professional projects",
   "author": "Lorenzo Portillo",
   "license": "ISC",
   "main": "index.html",
   "scripts": {
-    "build": "webpack",
+    "build": "npm run clean && webpack",
+    "clean": "rimraf dist",
     "start": "webpack serve --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +19,9 @@
     "@babylonjs/core": "^4.2.0",
     "@babylonjs/inspector": "^4.2.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^9.0.0",
     "html-webpack-plugin": "^5.3.1",
+    "rimraf": "^3.0.2",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
