--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "rxjs": "^7.1.0"
   }
 }
