--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "clean": "rimraf dist",
     "start": "webpack serve --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "upload-ionos": "npm run clean && webpack",
-    "publish": "npm run build && npm run upload-ionos && git add . && git commit -m \"[Published %npm_package_version%]\" && git push"
+    "deploy-ionos": "deploy-ionos.bat",
+    "publish:patch": "npm update patch && npm run publish",
+    "publish:minor": "npm update minor && npm run publish",
+    "publish:major": "npm update major && npm run publish",
+    "publish": "npm run build && npm run deploy-ionos && git add . && git commit -m \"[Published %npm_package_version%]\" && git push",
+    "ptest": "git add . && git commit -m \"test\" && git push"
   },
   "repository": {
     "type": "git",
