--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "publish:minor": "npm update minor && npm run publish",
     "publish:major": "npm update major && npm run publish",
     "publish": "npm run build && npm run deploy-ionos && git add . && git commit -m \"[Published %npm_package_version%]\" && git push",
-    "ptest": "git add . && git commit -m \"test\" && git push"
+    "ptest": "git add . && git commit -m \"test\" && git push",
+    "tt": "t"
   },
   "repository": {
     "type": "git",
