--- a/package.json
+++ b/package.json
@@ -10,20 +10,17 @@
     "clean": "rimraf dist",
     "start": "webpack serve --port 8080",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy-ionos": "deploy-ionos.bat",
+    "deploy-ionos": "..\\khanon-web-deploy-ionos.bat",
     "publish:patch": "npm update patch && npm run publish",
     "publish:minor": "npm update minor && npm run publish",
     "publish:major": "npm update major && npm run publish",
-    "publish": "npm run build && npm run deploy-ionos && git add . && git commit -m \"[Published %npm_package_version%]\" && git push",
-    "ptest": "git add . && git commit -m \"test\" && git push"
+    "publish": "npm run build && npm run deploy-ionos && git add . && git commit -m \"[Published %npm_package_version%]\" && git push"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Khanon/khanon-web.git"
   },
   "devDependencies": {
-    "@babylonjs/core": "^4.2.0",
-    "@babylonjs/inspector": "^4.2.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.0",
     "html-webpack-plugin": "^5.3.1",
@@ -35,6 +32,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babylonjs/core": "^4.2.0",
+    "@babylonjs/inspector": "^4.2.0",
     "rxjs": "^7.1.0"
   }
 }
