--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "khanon-web",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A view to my personal and professional projects",
   "author": "Lorenzo Portillo",
   "license": "",
@@ -17,7 +17,7 @@
     "publish:minor": "npm version minor --no-git-tag-version -f && npm run publish",
     "publish:major": "npm version major --no-git-tag-version -f && npm run publish",
     "publish:git": "git add . && git commit -m \"[Published %npm_package_version%]\" && git push",
-    "publish": "node version.js && npm run build:deploy-ionos && npm run publish:git"
+    "publish": "node version.js && npm run build && npm run publish:git && npm run deploy-ionos"
   },
   "repository": {
     "type": "git",
