KHW-15 Babylon inspector only on dev mode

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "license": "",
   "main": "index.html",
   "scripts": {
-    "webpack-bundle-test": "rimraf dist/js/khanon3d.js && webpack --config webpack.prod.js",
+    "webpack-bundle-analyze": "webpack --profile --json > bundle-stats.json && webpack-bundle-analyzer bundle-stats.json",
     "build": "npm run clean && node copy-assets.js && rimraf dist/index.html && webpack --config webpack.prod.js",
     "build:deploy": "npm run build && npm run deploy",
     "deploy": "..\\deploy-ionos.bat",
     "clean": "rimraf dist",
-    "start": "webpack serve --port 8080",
+    "start": "webpack serve --port 8080 --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish:patch": "npm version patch --no-git-tag-version -f && npm run publish",
     "publish:minor": "npm version minor --no-git-tag-version -f && npm run publish",
@@ -28,9 +28,11 @@
     "html-webpack-plugin": "^5.3.1",
     "recursive-copy": "^2.0.13",
     "rimraf": "^3.0.2",
+    "string-replace-loader": "^3.0.3",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
   },
