--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
     "semi": true,
     "singleQuote": true,
     "jsxBracketSameLine": true,
-    "jsxSingleQuote": true
+    "jsxSingleQuote": true,
+    "printWidth": 180
 }
