KHW-22 Canvas tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,13 @@
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
         "object-curly-spacing": [2, "always"],
-        "no-unused-vars":  ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
+        "no-unused-vars":  ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+        "sort-imports": ["error", {
+            "ignoreCase": false,
+            "ignoreDeclarationSort": false,
+            "ignoreMemberSort": false,
+            "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+            "allowSeparatedGroups": false
+        }]
     }
 }
