--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:deploy": "npm run build && npm run deploy",
     "deploy": "..\\deploy-ionos.bat",
     "clean": "rimraf dist",
+    "check-circular-refs": "dpdm ./src/app.ts",
     "start": "webpack serve --port 8080 --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish:patch": "npm version patch --no-git-tag-version -f && npm run publish",
