--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "npm run clean && node copy-assets.js && rimraf dist/index.html && webpack --config webpack.prod.js",
     "build:deploy": "npm run build && npm run deploy",
     "deploy": "..\\deploy-ionos.bat",
+    "deploy-under-construction": "..\\deploy-ionos-under-construction.bat",
     "clean": "rimraf dist",
     "check-circular-refs": "dpdm ./src/app.ts",
     "start": "webpack serve --port 8080 --config webpack.dev.js",
