KHW-20 KHW-22 Done core modules releases and scene intro to world workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "compilerOptions": {
+      "strict": true,
+      "strictPropertyInitialization": false,
+      "strictNullChecks": false,
       "experimentalDecorators": true,
       "target": "es6",
       "module": "commonjs",
       "noResolve": false,
       "noImplicitAny": false,
+      "noImplicitReturns": false,
       "sourceMap": true,
       "preserveConstEnums":true,
       "lib": [
