Switch from khanon3d local to package khanonjs and fix lints

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,30 +1,39 @@
 {
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "standard"
+    ],
     "env": {
         "browser": true,
         "es2021": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
+        "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": ["react", "@typescript-eslint"],
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
+        "curly": ["error", "all"],
         "indent": ["error", 4],
         "semi": ["error", "always"],
         "quotes": ["error", "single"],
         "object-curly-spacing": [2, "always"],
-        "no-unused-vars":  ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
-        "sort-imports": ["error", {
-            "ignoreCase": false,
-            "ignoreDeclarationSort": false,
-            "ignoreMemberSort": false,
-            "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
-            "allowSeparatedGroups": false
-        }]
+        "no-unused-vars": "off",
+        "sort-imports": "off",
+        "no-case-declarations": 0,
+        "space-before-function-paren": "off",
+        "no-useless-constructor": "off",
+        "no-new": "off",
+        "no-empty": "warn",
+        "@typescript-eslint/no-unused-vars": ["warn", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "@typescript-eslint/no-inferrable-types": "off"
     }
 }
