--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "khanon-web",
-  "version": "1.0.11",
+  "name": "lorenzo-portillo-website",
+  "version": "0.0.1",
   "description": "A view to my personal and professional projects",
   "author": "Lorenzo Portillo",
   "license": "",
@@ -9,9 +9,11 @@
     "webpack-bundle-analyze": "webpack --profile --json > bundle-stats.json && webpack-bundle-analyzer bundle-stats.json",
     "build": "npm run clean && node copy-assets.js && rimraf dist/index.html && webpack --config webpack.prod.js",
     "build:deploy": "npm run build && npm run deploy",
+    "link:khanonjs": "npm link @khanonjs/engine",
     "deploy": "..\\deploy-ionos.bat",
     "deploy:under-construction": "..\\deploy-ionos-under-construction.bat",
     "clean": "rimraf dist",
+    "lint": "eslint ./src/**/*.*",
     "check-circular-refs": "dpdm ./src/app.ts",
     "start": "webpack serve --port 8080 --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -23,14 +25,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Khanon/khanon-web.git"
+    "url": "https://github.com/Khanon/lorenzo.portillo-website.git"
   },
   "devDependencies": {
+    "@babylonjs/core": "^5.0.2",
+    "@babylonjs/gui": "^5.0.2",
+    "@babylonjs/inspector": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "eslint": "^8.12.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "html-webpack-plugin": "^5.3.1",
     "npm-quick-run": "^1.18.0",
     "recursive-copy": "^2.0.13",
     "rimraf": "^3.0.2",
+    "rxjs": "^7.1.0",
     "string-replace-loader": "^3.0.3",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
@@ -40,8 +53,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babylonjs/core": "^4.2.0",
-    "@babylonjs/inspector": "^4.2.0",
+    "@babylonjs/core": "^5.0.2",
+    "@babylonjs/gui": "^5.0.2",
+    "@babylonjs/inspector": "^5.0.2",
     "rxjs": "^7.1.0"
   }
 }
