--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,5 +35,6 @@
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/no-inferrable-types": "off"
-    }
+    },
+    "ignorePatterns": ["webpack*.*"]
 }
