allow develop khanonjs from symlink

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,10 +18,12 @@
     ],
     "rules": {
         "curly": ["error", "all"],
-        "indent": ["error", 4],
-        "semi": ["error", "always"],
-        "quotes": ["error", "single"],
-        "object-curly-spacing": [2, "always"],
+        "indent": ["warn", 4],
+        "semi": ["warn", "always"],
+        "quotes": ["warn", "single"],
+        "object-curly-spacing": ["warn", "always"],
+        "no-trailing-spaces": "warn",
+        "no-multi-spaces": "warn",
         "no-unused-vars": "off",
         "sort-imports": "off",
         "no-case-declarations": 0,
