--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,25 @@
 {
     "compilerOptions": {
+        "moduleResolution": "node",
+        "module": "esNext",
+        "target": "esNext",
+        "lib": [
+            "dom",
+            "es6",
+        ],
+        "importHelpers": true,
+        "declaration": true,
+        "noResolve": false,
+        "noImplicitThis": true,
+        "noImplicitAny": false,
+        "noImplicitReturns": false,
+        "strictFunctionTypes": true,
+        "skipLibCheck": true,
         "strict": true,
         "strictPropertyInitialization": false,
         "strictNullChecks": false,
         "experimentalDecorators": true,
-        "target": "es6",
-        "module": "commonjs",
-        "noResolve": false,
-        "noImplicitAny": false,
-        "noImplicitReturns": false,
         "sourceMap": true,
-        "preserveConstEnums":true,
-        "lib": [
-            "dom",
-            "es6"
-        ],
-        "rootDir": "src"
+        "preserveConstEnums":true
     }
 }
