--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "webpack-bundle-analyze": "webpack --profile --json > bundle-stats.json && webpack-bundle-analyzer bundle-stats.json",
     "build": "npm run clean && node copy-assets.js && rimraf dist/index.html && webpack --config webpack.prod.js",
     "build:deploy": "npm run build && npm run deploy",
-    "link:khanonjs": "npm link @khanonjs/engine",
+    "link": "npm link @khanonjs/engine",
+    "unlink": "rimraf ./node_modules/@khanonjs",
     "deploy": "..\\deploy-ionos.bat",
     "deploy:under-construction": "..\\deploy-ionos-under-construction.bat",
     "clean": "rimraf dist",
@@ -50,6 +51,7 @@
     "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
