--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,13 +24,20 @@
         "object-curly-spacing": ["warn", "always"],
         "no-trailing-spaces": "warn",
         "no-multi-spaces": "warn",
+        "no-multiple-empty-lines": "warn",
+        "spaced-comment": "warn",
+        "object-curly-newline": "warn",
+        "no-empty": "warn",
+        "padded-blocks": "warn",
+        "prefer-const": "warn",
+        "no-case-declarations": "off",
         "no-unused-vars": "off",
         "sort-imports": "off",
-        "no-case-declarations": 0,
         "space-before-function-paren": "off",
         "no-useless-constructor": "off",
         "no-new": "off",
-        "no-empty": "warn",
+        "lines-between-class-members": "warn",
+        "eol-last": "warn",
         "@typescript-eslint/no-unused-vars": ["warn", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-explicit-any": "off",
