--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,32 +18,35 @@
     ],
     "rules": {
         "curly": ["error", "all"],
-        "indent": ["warn", 4],
-        "semi": ["warn", "always"],
+        "indent": ["warn", 2],
+        "semi": ["warn", "never"],
         "quotes": ["warn", "single"],
         "object-curly-spacing": ["warn", "always"],
         "no-trailing-spaces": "warn",
         "no-multi-spaces": "warn",
         "no-multiple-empty-lines": "warn",
-        "spaced-comment": "warn",
-        "object-curly-newline": "warn",
-        "no-empty": "warn",
         "padded-blocks": "warn",
         "prefer-const": "warn",
+        "no-empty": "warn",
+        "comma-dangle": "warn",
+        "spaced-comment": "warn",
         "no-case-declarations": "off",
         "no-unused-vars": "off",
+        "no-unused-expressions": "off",
         "sort-imports": "off",
         "space-before-function-paren": "off",
+        "space-before-blocks": "warn",
         "no-useless-constructor": "off",
-        "no-new": "off",
+        "eol-last": ["warn", "always"],
+        "dot-notation": "off",
         "lines-between-class-members": "warn",
-        "eol-last": "warn",
         "@typescript-eslint/no-unused-vars": ["warn", { "vars": "all", "args": "none", "ignoreRestSiblings": false }],
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-inferrable-types": "off"
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/no-namespace": "off"
     },
     "ignorePatterns": ["webpack*.*"]
 }
