--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "bundle-stats.json": true
+    },
     "files.exclude": {
         "docs": true,
-        "khanonjs/node_modules": true
-    }
+        "khanonjs/node_modules": true,
+        "rkhanonjs/node_modules": true
+    },
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
