--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "",
   "main": "index.html",
   "scripts": {
+    "start": "webpack serve --port 8080 --config webpack.dev.js",
+    "start:prod": "webpack serve --port 8080 --config webpack.prod.js",
     "webpack-bundle-analyze": "webpack --profile --json > bundle-stats.json && webpack-bundle-analyzer bundle-stats.json",
     "build": "npm run clean && node copy-assets.js && rimraf dist/index.html && webpack --config webpack.prod.js",
     "build:deploy": "npm run build && npm run deploy",
@@ -16,7 +18,6 @@
     "clean": "rimraf dist",
     "lint": "eslint ./src/**/*.*",
     "check-circular-refs": "dpdm ./src/app.ts",
-    "start": "webpack serve --port 8080 --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,14 +26,15 @@
   },
   "devDependencies": {
     "@babylonjs/inspector": "^6.38.0",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@types/node": "^20.9.4",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "html-webpack-plugin": "^5.3.1",
     "npm-quick-run": "^1.18.0",
     "recursive-copy": "^2.0.13",
@@ -40,7 +42,7 @@
     "rxjs": "^7.1.0",
     "string-replace-loader": "^3.0.3",
     "ts-loader": "^9.1.2",
-    "typescript": "^4.2.4",
+    "typescript": "^5.3.3",
     "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.2",
