--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
+        "target": "ES2022",
+        "module": "CommonJS",
         "moduleResolution": "node",
-        "module": "es6",
-        "target": "es6",
         "lib": [
-            "dom",
-            "es6",
+          "dom",
+          "es6"
         ],
         "importHelpers": true,
         "declaration": false,
@@ -20,6 +20,15 @@
         "strictNullChecks": false,
         "experimentalDecorators": true,
         "sourceMap": true,
-        "preserveConstEnums":true
-    }
+        "preserveConstEnums":true,
+        "esModuleInterop": true,
+        "noUnusedLocals": false
+    },
+    "include": [
+      "src/**/*"
+    ],
+    "exclude": [
+      "qkhanonjsold/**/*",
+      "rkhanonjs/**/*"
+    ]
 }
