--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "deploy:under-construction": "..\\deploy-ionos-under-construction.bat",
     "clean": "rimraf dist",
     "lint": "eslint ./src/**/*.*",
-    "check-circular-refs": "dpdm ./src/app.ts",
+    "circular-refs": "dpdm ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "dpdm": "^3.14.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.0",
