--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/Khanon/lorenzo.portillo-website.git"
   },
   "devDependencies": {
-    "@babylonjs/inspector": "^6.38.0",
+    "@babylonjs/inspector": "~7.2.1",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -50,7 +50,7 @@
     "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {
-    "@babylonjs/core": "^6.38.0",
-    "@babylonjs/gui": "^6.38.0"
+    "@babylonjs/core": "~7.2.1",
+    "@babylonjs/gui": "~7.2.1"
   }
 }
