--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@babylonjs/core": "~7.2.1",
-    "@babylonjs/gui": "~7.2.1"
+    "@babylonjs/gui": "~7.2.1",
+    "@khanonjs/engine": "^0.0.60"
   }
 }
