--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babylonjs/inspector": "~7.2.1",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "copy-webpack-plugin": "^12.0.2",
     "dpdm": "^3.14.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
@@ -52,6 +52,6 @@
   "dependencies": {
     "@babylonjs/core": "~7.2.1",
     "@babylonjs/gui": "~7.2.1",
-    "@khanonjs/engine": "^0.0.60"
+    "@khanonjs/engine": "^0.0.66"
   }
 }
