--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "skipLibCheck": true,
         "strict": true,
         "strictPropertyInitialization": false,
-        "strictNullChecks": false,
+        "strictNullChecks": true,
         "experimentalDecorators": true,
         "sourceMap": true,
         "preserveConstEnums":true,
