--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
   "dependencies": {
     "@babylonjs/core": "~7.2.3",
     "@babylonjs/gui": "~7.2.3",
-    "@khanonjs/engine": "^0.0.66"
+    "@babylonjs/inspector": "~7.2.3",
+    "@babylonjs/loaders": "~7.2.3",
+    "@babylonjs/materials": "~7.2.3",
+    "@babylonjs/serializers": "~7.2.3",
+    "@khanonjs/engine": "^0.0.76"
   }
 }
